--- a/_talks/2024-01-31-plant-talk-1.md
+++ b/_talks/2024-01-31-plant-talk-1.md
@@ -9,4 +9,4 @@ location: "Boston, MA"
 ---
 
 <!--This is a description of your conference proceedings talk, note the different field in type. You can put anything in this field.-->
-[Slides](https://github.com/debjyotiSRoy/xcube/tree/plant-talk.pdf)
+[Slides](http://debjyotiSRoy.github.io/files/plant-talk.pdf)
